[Fixes #27180683] Layout issue on Admin Center sidebar page
- adjust Sidebar text field width
- fix cucumber

--- a/app/stylesheets/new_main.sass
+++ b/app/stylesheets/new_main.sass
@@ -838,7 +838,7 @@ table.generic-table
           line-height: 16px
           margin: 0 auto
         td.name input
-          width: 97%
+          width: 96%
         td.title input
           width: 95%
         td.url input
